[package]
name = "hyperlane-cli"
version = "0.1.5"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A command-line tool for Hyperlane framework."""
keywords = ["output", "console", "log", "print", "color"]
repository = "https://github.com/hyperlane-dev/hyperlane-cli"
categories = ["command-line-interface", "development-tools", "visualization"]
exclude = ["target", "Cargo.lock", "sh", ".github"]

[dependencies]
toml = "0.9.8"
tokio = { version = "1.49.0", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
